external-crates/move/crates/move-compiler/tests/move_2024/unit_test/cross_module_test_only_module.exp
error[E03002]: unbound module
   ┌─ tests/move_2024/unit_test/cross_module_test_only_module.move:10:9
   │
10 │     use 0x1::M;
   │         ^^^^^^ Invalid 'use'. Unbound module: '0x1::M'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/unit_test/cross_module_test_only_module.move:13:9
   │
13 │         M::foo()
   │         ^^^^^^ Unexpected module. A module identifier is not a valid expression

